...
        fatalError("init(coder:) has not been implemented")
    }

    override func viewDidLoad() {
        super.viewDidLoad()

        tableView.accessibilityLabel = "Stories"
        tableView.register(MainStoryTableViewCell.self, forCellReuseIdentifier: "MainStoryCell")
        tableView.register(StoryTableViewCell.self, forCellReuseIdentifier: "StoryCell")
        tableView.register(WeblinkTableViewCell.self, forCellReuseIdentifier: "WeblinkCell")
        tableView.register(AdvertTableViewCell.self, forCellReuseIdentifier: "AdvertCell")

        tableView.separatorColor = .clear
...
